--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,24 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+#fontcorrection {
+	font-size: 40px;
+	font-weight: 550;
+}
+
+#fontcorrection:after{
+	font-family: Arial;
+}
+
+.fa-linkedin-in {
+	font-size: 38px;
+	font-weight: 500
+}
+
+.fa-github {
+	font-size: 38px;
+	font-weight: 500
+}
 
 
 html, body, div, span, applet, object,
